fixed CSS loading Problem

--- a/products.html
+++ b/products.html
@@ -10,13 +10,13 @@
     <script src="https://kit.fontawesome.com/4a6d3cdf53.js" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="/Style/Style.css">
-    <link rel="stylesheet" href="/Style/Navbar.css">
-    <link rel="stylesheet" href="/Style/Hero.css">
-    <link rel="stylesheet" href="/Style/Products.css">
-    <link rel="stylesheet" href="/Style/Responsive.css">
-    <link rel="stylesheet" href="/Style/About.css">
-    <link rel="stylesheet" href="/Style/Section2.css">
+    <link rel="stylesheet" href="Style/Style.css">
+    <link rel="stylesheet" href="Style/Navbar.css">
+    <link rel="stylesheet" href="Style/Hero.css">
+    <link rel="stylesheet" href="Style/Products.css">
+    <link rel="stylesheet" href="Style/Responsive.css">
+    <link rel="stylesheet" href="Style/About.css">
+    <link rel="stylesheet" href="Style/Section2.css">
 
     <title>Power Systems Technology-Products</title>
     <link rel="import" href="index.html">
