--- a/Index.html
+++ b/Index.html
@@ -10,22 +10,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <link rel="stylesheet" href="/Style/Style.css">
-    <link rel="stylesheet" href="/Style/Navbar.css">
-    <link rel="stylesheet" href="/Style/About.css">
-    <link rel="stylesheet" href="/Style/Hero.css">
-    <link rel="stylesheet" href="/Style/Sponsors-bar.css">
-    <link rel="stylesheet" href="/Style/Footer.css">
-    <link rel="stylesheet" href="/Style/Responsive.css">
+    <link rel="stylesheet" href="Style/Style.css">
+    <link rel="stylesheet" href="Style/Navbar.css">
+    <link rel="stylesheet" href="Style/About.css">
+    <link rel="stylesheet" href="Style/Hero.css">
+    <link rel="stylesheet" href="Style/Sponsors-bar.css">
+    <link rel="stylesheet" href="Style/Footer.css">
+    <link rel="stylesheet" href="Style/FeaturedPoducts.css">
+    <link rel="stylesheet" href="Style/Responsive.css">
   
 
-    <link rel="stylesheet" href="/Style/FeaturedPoducts.css">
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <script src="/Scripts/Scroll.js"></script>
+    <script src="Scripts/Scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="/Scripts/Carousel.js" defer></script>
-    <script src="/Scripts/Buttons.js"></script>
+    <script src="Scripts/Carousel.js" defer></script>
+    <script src="Scripts/Buttons.js"></script>
     <script src="https://kit.fontawesome.com/4a6d3cdf53.js" crossorigin="anonymous"></script>
 
 </head>
@@ -93,7 +92,7 @@
 
     <header id = 'navBar' >
      
-        <img src="/Images/Logo/logo-PST.svg" id="logo">
+        <img src="Images/Logo/logo-PST.svg" id="logo">
         
         <ul class="navLinks">
           <!-- <a href="about.html" >ABOUT-US</a> -->
