General Style Changes

--- a/products.html
+++ b/products.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/Scripts/products.js" defer></script>
+    <script src="Scripts/Sidebar.js"></script>
+
+    <script src="Scripts/products.js" defer></script>
     <script src="https://kit.fontawesome.com/4a6d3cdf53.js" crossorigin="anonymous"></script>
+<script src="Scripts/Sidebar.js"></script>
 
-
-    <link rel="stylesheet" href="Style/Style.css">
+    <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="Style/Navbar.css">
     <link rel="stylesheet" href="Style/Hero.css">
     <link rel="stylesheet" href="Style/Products.css">
