--- a/Index.html
+++ b/Index.html
@@ -27,10 +27,10 @@
 
     <script src="Scripts/Scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="Scripts/Carousel.js" defer></script>
+    <!-- <script src="Scripts/Carousel.js" defer></script> -->
     <script src="Scripts/Buttons.js"></script>
     <script src="Scripts/Sidebar.js" defer></script>
-    <script src = "Scripts/products.js"></script>
+    <!-- <script src = "Scripts/products.js"></script> -->
     <script src="Scripts/Form.js"></script>
 
     <script src="https://cdn.metroui.org.ua/v4/js/metro.min.js"></script>
@@ -343,16 +343,16 @@
         <a href="#" class="sblogos__link"><img class="sblogos__img" src="Logos/acdc.png" alt="logo" /></a>
       </div>
       <div class="sblogos__col">
-        <a href="#" class="sblogos__link"><img class="sblogos__img" src="/Logos/sollatek-new-logo-650px.png" alt="logo" /></a>
+        <a href="#" class="sblogos__link"><img class="sblogos__img" src="Logos/sollatek-new-logo-650px.png" alt="logo" /></a>
       </div>
       <div class="sblogos__col">
-        <a href="#" class="sblogos__link"><img class="sblogos__img" src="/Logos/Waco.png" alt="logo" /></a>
+        <a href="#" class="sblogos__link"><img class="sblogos__img" src="Logos/Waco.png" alt="logo" /></a>
       </div>
       <div class="sblogos__col">
-        <a href="#" class="sblogos__link"><img class="sblogos__img" src="/Logos/philips.svg" alt="logo" /></a>
+        <a href="#" class="sblogos__link"><img class="sblogos__img" src="Logos/philips.svg" alt="logo" /></a>
       </div>
       <div class="sblogos__col">
-        <a href="#" class="sblogos__link"><img class="sblogos__img" src="/Logos/osram-logo.svg" alt="logo" /></a>
+        <a href="#" class="sblogos__link"><img class="sblogos__img" src="Logos/osram-logo.svg" alt="logo" /></a>
       </div>
      
     </div>
