--- a/products.html
+++ b/products.html
@@ -60,7 +60,7 @@
         <ul class="navLinks">
             <a href="">ABOUT-US</a>
             <a href="">COTNRACTING</a>
-            <a href="Index.html">HOME</a>
+            <a href="index.html">HOME</a>
             <button class = "contactButton">GET IN TOUCH</button>
         </ul>
     </header>
