--- a/contracting.html
+++ b/contracting.html
@@ -43,7 +43,7 @@
       </div>
       <ul>
         <li><a href="about.html" >ABOUT-US</a></li>
-        <li><a href="Index.html"></a></li>
+        <li><a href="index.html"></a></li>
         <li><a href="products.html">PRODUCTS</a></li>
 
       </ul>
@@ -61,7 +61,7 @@
         
         <ul class="navLinks">
           <!-- <a href="about.html" >ABOUT-US</a> -->
-            <a href="Index.html">HOME</a>
+            <a href="index.html">HOME</a>
             <a href="products.html">PRODUCTS</a>
 
             <button class = "contactButton" onclick="smoothScroll(document.getElementById('footer'))">GET IN TOUCH</button>
